Fix inline asm constraints for 8/16 bit stores

--- a/qemu-0.9.1/Makefile.target
+++ b/qemu-0.9.1/Makefile.target
@@ -588,6 +588,7 @@ translate.o: translate.c gen-op.h opc.h cpu.h
 translate-all.o: translate-all.c opc.h cpu.h
 
 translate-op.o: translate-all.c op.h opc.h cpu.h
+	$(CC) $(CFLAGS) $(CPPFLAGS) $(BASE_CFLAGS) -c -o $@ $(SRC_PATH)/translate-all.c
 
 op.h: op.o $(DYNGEN)
 	$(DYNGEN) -o $@ $<
